--- a/docker/Dockerfile_badminton_bot
+++ b/docker/Dockerfile_badminton_bot
@@ -1,5 +1,5 @@
 # define base image as python slim-buster.
-FROM python:3.7-slim-buster as base
+FROM python:3.10-slim-buster as base
 
 ## start builder stage.
 
@@ -43,7 +43,7 @@ FROM builder
 # set the proxy addresses
 #ENV HTTP_PROXY "http://134.209.29.120:8080"
 #ENV HTTPS_PROXY "https://45.77.71.140:9050"
-
+WORKDIR /app/
 # default entry point.
-#CMD ["python", "app/webscraper.py", "-c"]
+CMD ["python", "/app/bot.py"]
 ## end base stage.
